Fix overflow for mdr box (???)

--- a/custom.css
+++ b/custom.css
@@ -1,13 +1,13 @@
 .mdr {
   color:var(--sidebar-active);
   background-color:var(--sidebar-bg);
-  border: 5px solid var(--sidebar-fg);
-  padding: 10px;
-  margin-right: 20%;
-  margin-left: 20%;
-  moz-border-radius: 15px;
-  -webkit-border-radius: 15px;
-  overflow: scroll;
+  border: 1px solid var(--sidebar-fg);
+  padding: 1%;
+//  margin-right: 1%;
+//  margin-left: 1%;
+//  moz-border-radius: 1%;
+//  -webkit-border-radius: 1%;
+  overflow: auto;
 }
 
 footer {
